# s3de

./: CMakeLists.txt
include/s3de/: s3de.h
src/: main.c  s3de.c
